test/data/acl_testing5/conn_spec.json
{
    "segments": {
        "need-dns": {
            "type": "subnet",
            "items": [
                "sub1-1-ky",
                "sub2-1-ky"
            ]
        }
    },
    "externals": {
        "dns": "8.8.8.8/0"
    },
    "required-connections": [
        {
            "src": {
                "name": "need-dns",
                "type": "segment"
            },
            "dst": {
                "name": "need-dns",
                "type": "segment"
            },
            "allowed-protocols": [
                {
                    "protocol": "TCP",
                    "min_destination_port": 443,
                    "max_destination_port": 443
                }
            ]
        },
        {
            "src": {
                "name": "need-dns",
                "type": "segment"
            },
            "dst": {
                "name": "dns",
                "type": "external"
            }
        },
        {
            "src": {
                "name": "need-dns",
                "type": "segment"
            },
            "dst": {
                "name": "sub3-1-ky",
                "type": "subnet"
            },
            "allowed-protocols": [
                {
                    "protocol": "ICMP",
                    "type": 8,
                    "code": 0
                }
            ]
        },
        {
            "src": {
                "name": "sub1-1-ky",
                "type": "subnet"
            },
            "dst": {
                "name": "sub1-2-ky",
                "type": "subnet"
            },
            "bidirectional": true,
            "allowed-protocols": [
                {
                    "protocol": "TCP"
                }
            ]
        },
        {
            "src": {
                "name": "sub1-1-ky",
                "type": "subnet"
            },
            "dst": {
                "name": "sub1-3-ky",
                "type": "subnet"
            },
            "bidirectional": true,
            "allowed-protocols": [
                {
                    "protocol": "TCP"
                }
            ]
        },
        {
            "src": {
                "name": "sub1-2-ky",
                "type": "subnet"
            },
            "dst": {
                "name": "sub1-3-ky",
                "type": "subnet"
            },
            "bidirectional": true,
            "allowed-protocols": [
                {
                    "protocol": "TCP"
                }
            ]
        },
        {
            "src": {
                "name": "sub2-1-ky",
                "type": "subnet"
            },
            "dst": {
                "name": "sub2-2-ky",
                "type": "subnet"
            },
            "bidirectional": true,
            "allowed-protocols": [
                {
                    "protocol": "ANY"
                }
            ]
        },
        {
            "src": {
                "name": "sub3-1-ky",
                "type": "subnet"
            },
            "dst": {
                "name": "sub2-1-ky",
                "type": "subnet"
            },
            "allowed-protocols": [
                {
                    "protocol": "TCP",
                    "min_destination_port": 443,
                    "max_destination_port": 443
                }
            ]
        }
    ]
}
