test/data/acl_testing5/connecitivity-map.txt
warning: ignoring endpoint_gateways, TODO: add support
load_balancers resource type is not yet supported
routing_tables resource type is not yet supported
combined connections between subnets:
sub1-1-ky => Public Internet (all ranges) : All Connections
sub1-1-ky => sub1-2-ky : protocol: TCP
sub1-1-ky => sub1-3-ky : protocol: TCP
sub1-1-ky => sub2-1-ky : protocol: TCP src-ports: 1-442,444-65535 dst-ports: 443; protocol: TCP src-ports: 443
sub1-1-ky => sub3-1-ky : protocol: ICMP icmp-type: 8 icmp-code: 0 *
sub1-2-ky => sub1-1-ky : protocol: TCP
sub1-2-ky => sub1-3-ky : protocol: TCP
sub1-3-ky => sub1-1-ky : protocol: TCP
sub1-3-ky => sub1-2-ky : protocol: TCP
sub2-1-ky => Public Internet (all ranges) : All Connections
sub2-1-ky => sub1-1-ky : protocol: TCP src-ports: 1-442,444-65535 dst-ports: 443; protocol: TCP src-ports: 443
sub2-1-ky => sub2-2-ky : All Connections
sub2-1-ky => sub3-1-ky : protocol: ICMP icmp-type: 8 icmp-code: 0; protocol: TCP src-ports: 443
sub2-2-ky => sub2-1-ky : All Connections
sub3-1-ky => sub1-1-ky : protocol: ICMP icmp-type: 0 icmp-code: 0 *
sub3-1-ky => sub2-1-ky : protocol: ICMP icmp-type: 0 icmp-code: 0; protocol: TCP dst-ports: 443

connections are stateful unless marked with *
